# STL-Dev_Camille

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  comp_sep.py  pyproject.toml  requirements.txt  toy_compsep.py  toy_compsep.slurm
.github/workflows/: ci.yaml  release.yml
STL_main/: Base_DataClass.py  STL_2D_FFT_Torch.py  STL_2D_Kernel_Torch.py  ST_Operator.py  ST_Statistics.py  Synthesis.py  __init__.py  torch_backend.py
benchmarks/outputs/benchmark_1/: plot.ipynb  run_2026-03-30_13-00-47.csv  run_2026-03-30_13-00-47.txt
benchmarks/scripts/: benchmark_1.py  benchmark_a.py  run_benchmark.sh
data/test/: patch_129_main.npy
docs/: user_notebook.ipynb
docs/user_notebook/: synthesis.ipynb
tests/: test_2D_FFT_Torch.py
tests/certification_notebooks/2D_FFT_Torch/: CN1_2D_FFT_Torch_DataClass.ipynb  CN2_2D_FFT_Torch_Wavelets.ipynb  CN4_2D_FFT_Torch_ST_Operator.ipynb  PS_not_PBC.ipynb  Power_Spectrum.ipynb  Test_StlData.ipynb  Test_StlOperator.ipynb
tests/certification_notebooks/2D_Kernel_Torch/: Power_Spectrum.ipynb  min_work_ex_STL_173.ipynb
tests/certification_notebooks/Healpix_Kernel_Torch/: Certification_Notebook_Healpix_kernel.ipynb
