[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "STL"
dynamic = ["version"]

[tool.setuptools.packages.find]
include = ["STL_main*"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["STL_main"]
default_section = "THIRDPARTY"
multi_line_output = 3
include_trailing_comma = true